<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:inputTxtLayout="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.dnc.buendeal.core.core.ui.view.DropdownMenuTextInputLayout
        android:id="@+id/dropdownMenuSort"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toStartOf="@+id/switchDiff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        inputTxtLayout:hint="@string/lowest_price"
        inputTxtLayout:label="@string/sort_by" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchDiff"
        style="@style/SwitchBND"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/differences_only"
        android:thumb="@drawable/selector_custom_thumb_switch"
        app:layout_constraintBottom_toBottomOf="@+id/dropdownMenuSort"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dropdownMenuSort"
        app:layout_constraintTop_toTopOf="@+id/dropdownMenuSort" />

</androidx.constraintlayout.widget.ConstraintLayout>
