<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/productEmptyBlockReviews"
        style="@style/InterMedium.HeaderH4InterMedium16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reviews"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/productEmptyBlockText"
        style="@style/InterRegular.Body2InterRegular14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/empty_reviews_block_text"
        android:textColor="@color/rating_votes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productEmptyBlockReviews" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/productReviewsBtnWriteReviews"
        style="@style/ContainedBtnGeneralSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default_input"
        android:layout_marginBottom="@dimen/margin_default_input"
        android:paddingStart="78dp"
        android:paddingEnd="78dp"
        android:text="@string/write_a_review"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productEmptyBlockText" />

</androidx.constraintlayout.widget.ConstraintLayout>
