<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/margin_default_input">

    <TextView
        android:id="@+id/productRiskFreeShopping"
        style="@style/InterMedium.HeaderH4InterMedium16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_walkthrough_title"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/productFirstRisk"
        style="@style/InterRegular.Body2InterRegular14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default_input"
        android:drawablePadding="@dimen/margin_medium"
        android:text="@string/first_risk_free_shopping_single_product"
        android:textColor="@color/dark_gray_1"
        app:drawableStartCompat="@drawable/ic_shield_check_single_product"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productRiskFreeShopping" />

    <TextView
        android:id="@+id/productSecondRisk"
        style="@style/InterRegular.Body2InterRegular14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_default_input"
        android:text="@string/second_risk_free_shopping_single_product"
        android:textColor="@color/dark_gray_1"
        app:drawableStartCompat="@drawable/ic_credit_card_outcome_single_product"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productFirstRisk" />

    <ImageView
        android:id="@+id/productRiskDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:src="@drawable/separator_category_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productSecondRisk" />

    <TextView
        android:id="@+id/productRiskLearnMore"
        style="@style/InterMedium.HeaderH4InterMedium16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/learn_more"
        android:textColor="@color/main_blue"
        android:paddingVertical="@dimen/padding_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productRiskDivider" />

</androidx.constraintlayout.widget.ConstraintLayout>
