<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:inputTxtLayout="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/supportPopupTitle"
        style="@style/InterMedium.HeaderH4InterMedium16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default_input"
        android:layout_marginTop="18dp"
        android:text="@string/contact_support"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/supportPopupCross"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_default_input"
        android:src="@drawable/ic_cross"
        app:layout_constraintBottom_toBottomOf="@+id/supportPopupTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/supportPopupTitle" />

    <ImageView
        android:id="@+id/supportPopupDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="@dimen/margin_small"
        android:src="@drawable/separator_category_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/supportPopupTitle" />

    <com.dnc.buendeal.core.core.ui.view.TextInputLayoutFloatingLabel
        android:id="@+id/supportPopupTextInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/supportPopupDivider"
        inputTxtLayout:label="@string/your_email" />

    <com.dnc.buendeal.core.core.ui.view.TextAreaTextInputLayout
        android:id="@+id/supportPopupTextAreaInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_default_input"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/supportPopupTextInputLayoutEmail"
        inputTxtLayout:label="@string/message" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/supportPopupBtnSubmit"
        style="@style/ContainedBtnGeneralLarge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_default_input"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="@dimen/margin_big"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/supportPopupTextAreaInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
